Adjust edit icon positioning

--- a/app/elements/recipe-collection.html
+++ b/app/elements/recipe-collection.html
@@ -62,15 +62,9 @@
                     <div>[[recipe.summary]]</div>
 
                     <iron-collapse id="collapse" opened="{{recipe._expanded}}">
-                        <!-- Edit recipe button. -->
-                        <paper-icon-button icon="icons:create"
-                                data-id$="[[recipe.id]]"
-                                on-tap="loadRecipePage">
-                        </paper-icon-button>
-
                         <div class="layout horizontal wrap">
                             <div class="flex-4 recipe-col">
-                                <strong>Ingredients</strong>
+                                <strong class="recipe-item-label">Ingredients</strong>
                                 <ul class="ingredients-list">
                                     <template is="dom-repeat"
                                             items="[[recipe.ingredients]]"
@@ -80,7 +74,7 @@
                                 </ul>
                             </div>
                             <div class="flex-4 recipe-col">
-                                <strong>Directions</strong>
+                                <strong class="recipe-item-label">Directions</strong>
                                 <ol class="directions-list">
                                     <template is="dom-repeat"
                                             items="[[recipe.directions]]"
@@ -92,36 +86,39 @@
                             <!-- Info column. -->
                             <div class="flex-4 recipe-col">
                                 <template is="dom-if" if="[[recipe.amount]]">
-                                    <strong>Amount</strong>
+                                    <strong class="recipe-item-label">Amount</strong>
                                     <div>[[recipe.amount]]</div>
-                                    <br />
                                 </template>
                                 <template is="dom-if" if="[[recipe.time]]">
-                                    <strong>Time</strong>
+                                    <strong class="recipe-item-label">Time</strong>
                                     <div>[[recipe.time]]</div>
-                                    <br />
                                 </template>
                                 <template is="dom-if" if="[[recipe.oven]]">
-                                    <Strong>Oven</Strong>
+                                    <Strong class="recipe-item-label">Oven</Strong>
                                     <div>[[recipe.oven]]</div>
-                                    <br />
                                 </template>
-                                <strong>Author</strong>
+                                <strong class="recipe-item-label">Author</strong>
                                 <div>[[recipe.author_name]]</div>
-                                <br />
                                 <template is="dom-if" if="[[recipe.source]]">
-                                    <strong>Source</strong>
+                                    <strong class="recipe-item-label">Source</strong>
                                     <div>[[recipe.source]]</div>
-                                    <br />
                                 </template>
-                                <strong>Revision</strong>
+                                <strong class="recipe-item-label">Revision</strong>
                                 <div>[[recipe.revision]]</div>
-                                <br />
                                 <template is="dom-if" if="[[recipe.notes]]">
-                                    <strong>Notes</strong>
+                                    <strong class="recipe-item-label">Notes</strong>
                                     <div>[[recipe.notes]]</div>
-                                    <br />
                                 </template>
+                                <!-- Edit recipe button. -->
+                                <div class="layout horizontal end-justified">
+                                    <paper-button raised
+                                             on-tap="loadRecipePage"
+                                             data-id$="[[recipe.id]]">
+                                        <iron-icon icon="icons:link">
+                                        </iron-icon>
+                                        Permalink
+                                    </paper-button>
+                                </div>
                             </div>
                         </div>
                     </iron-collapse>
