--- a/app/styles/global-styles.html
+++ b/app/styles/global-styles.html
@@ -51,6 +51,10 @@
                 margin-top: 1.2em;
                 margin-bottom: 1.2em;
             }
+            .recipe-item-label {
+                padding-top: 1em;
+                display: block;
+            }
 
             .card-item {
                 padding-left: 0.5em;
