Migrate users page to item-collection from Awning Tracker
- User display card is now in user-display
- The user-collection element is replaced by item-collection
- Rename user.date_created to user.creation_date to match Awning Tracker

--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -33,6 +33,9 @@
         /* paper-menu */
         --paper-menu-background-color: #fff;
         --menu-link-color: #111111;
+
+        /* paper-fab */
+        --paper-fab-background: var(--default-primary-color);
     }
 
     /* General styles */
