--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -35,20 +35,18 @@
 
 <!-- Configure your routes here -->
 <link rel="import" href="routing.html">
-<!--<link rel="import" href="login-form.html">-->
 
-<!-- Add your elements here -->
-<!--<link rel="import" href="app-config.html">-->
-<!--<link rel="import" href="global-behavior.html">-->
 
-<!--<link rel="import" href="user-behavior.html">-->
-<link rel="import" href="user-collection.html">
+<link rel="import" href="../styles/app-theme.html">
+<link rel="import" href="../styles/global-styles.html">
+
+<link rel="import" href="global-behavior.html">
+
+<link rel="import" href="item-collection.html">
+<link rel="import" href="user-display.html">
 <link rel="import" href="recipe-collection.html">
 <link rel="import" href="recipe-details.html">
 
 <!--<link rel="import" href="cookie-display.html">-->
 
-<link rel="import" href="../styles/app-theme.html">
-<link rel="import" href="../styles/global-styles.html">
-<link rel="import" href="../styles/utility-styles.html">
 
