--- a/app/elements/global-behavior.html
+++ b/app/elements/global-behavior.html
@@ -1,133 +1,39 @@
 <!--
-    Jon Doltar
-    2016-01
+    Randy Westlund
+    2016-07
 -->
 
 <script>
-var RecipeBehaviors = RecipeBehaviors || {};
-RecipeBehaviors.GlobalBehavior = {
-
-    listeners: {
-        'iron-overlay-opened': 'handleCustomOpen',
-        'iron-overlay-closed': 'handleCustomClose'
-
-    },
-
-    properties: {
-
-    },
+var recipe_behaviors = recipe_behaviors || {};
+recipe_behaviors.global_behavior = {
 
     created: function() {
 
         var constants = {};
 
         constants.userRoleEnum = {
-            admin: 'admin',
-            user: 'user',
-            guest: 'guest',
+            admin:      'admin',
+            moderator:  'moderator',
+            user:       'user',
+            guest:      'guest',
         };
         this.set('constants', constants);
     },
-
-    ready: function () {
-        this.setUpAjax();
-    },
-
-    printDebug: function () {
-    },
-
-    handleCustomOpen: function () {
-        var body = Polymer.dom(document).querySelector('body');
-        this.toggleClass('dialog-is-open', true, body);
-    },
-
-    handleCustomClose: function () {
-        var body = Polymer.dom(document).querySelector('body');
-        this.toggleClass('dialog-is-open', false, body);
-    },
-
-    setUpAjax: function() {
-
-        //setup ajax error handling, applies to all requests
-        var that = this;
-        $.ajaxSetup({
-            statusCode: {
-                401: function (xhr, status, error) {
-                    // call global ajax handler
-                    that.globalAjaxHandler(xhr);
-                }
-            }
-        });
-    },
-    // this gets called whenever a request fails
-    // gets called from both iron-ajax and jquery.ajax
-    globalAjaxHandler: function(xhr) {
-        switch(xhr.status) {
-            case 401: 
-                window.location.href ='/auth/login';
-                break;
-        }
-    },
-
     isUserAdmin: function(role) {
         return (role === this.constants.userRoleEnum.admin);
     },
-
     isUserGuest: function(role) {
         return (role === this.constants.userRoleEnum.guest);
     },
-
-    capitalizeFirstLetter: function (str) {
-        // replace underscores with spaces
-        str = str.split('_').join(' ');
-        // captilize it
-        return str.charAt(0).toUpperCase() + str.slice(1);
-    },
-    // iterate through enum and generate array we can repeat over
-    convertEnumToArray: function(enumKey) {
-        if(!enumKey) return [];
-        var obj = this.constants[enumKey];
-
-        var array = [];
-        var keys = Object.keys(obj);
-
-        for(var i = 0; i < keys.length; i++) {
-            var value, pretty = value = obj[keys[i]];
-            // capitalize the first character
-            pretty = this.capitalizeFirstLetter(pretty);
-
-            array.push({
-                key: keys[i],
-                value: value,
-                pretty: pretty,
-            });
-        }
-        return array;
-    },
-    userMenuFilter: function (user) {
-        return !!user.name;
-    },
-    formatTimestamp: function (timestamp) {
-        var date = new Date(timestamp);
+    long_date: function(d) {
+        var date = new Date(d);
         return date.toDateString() + ' ' + date.toLocaleTimeString();
     },
-    sortUnits: function(a, b) {
-        if(a.name < b.name) return -1;
-        if(a.name > b.name) return 1;
-        return 0;
+    equal: function(a, b) {
+        return a === b;
     },
-    sortUsers: function(a, b) {
-        var nameA = a.name || a.email;
-        var nameB = b.name || b.email;
-        if(nameA < nameB) return -1;
-        if(nameA > nameB) return 1;
-        return 0;
-    },
-
-    addLeadingZero: function(val) {
-        val = Number(val);
-        if(0 <= val && val <= 9) return '0' + val;
-        else return val;
+    first_defined: function(a, b) {
+        return a || b;
     },
 
 };
