--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
         <paper-toolbar id="mainToolbar" >
             <div class="middle">
                 <span>Recipes</span>
+                <a href="/#!/users">Users</a>
             </div>
             <span class="flex"></span>
             <div class="top-right-bar">
@@ -92,7 +93,7 @@
 
                 <!--<template is="dom-if" if="[[isUserAdmin(userRole)]]">-->
                     <section data-route="users">
-                        <user-collection><user-collection>
+                        <item-collection item-name="users"><item-collection>
                     </section>
                 <!--</template>-->
 
