Add server-side search and pagination of users
- Query can match name, email, or role
- Generalize the handler function that extracts an ItemFilter
- Misc comment reformating

--- a/app/elements/recipe-collection.html
+++ b/app/elements/recipe-collection.html
@@ -174,7 +174,7 @@
                 computeRecipeFilter: function(count, skip, titleFilter) {
                     var o = { count: count };
                     if (skip) o.skip = skip;
-                    if (titleFilter) o.title_or_tag = titleFilter;
+                    if (titleFilter) o.query = titleFilter;
                     return o;
                 },
                 computeDisableNext: function(recipes, count) {
