Migrate recipe-collection to item-collection
- Move recipe card to recipe-display
- Delete recipe-collection, use item-collection

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -44,7 +44,7 @@
 
 <link rel="import" href="item-collection.html">
 <link rel="import" href="user-display.html">
-<link rel="import" href="recipe-collection.html">
+<link rel="import" href="recipe-display.html">
 <link rel="import" href="recipe-details.html">
 
 <!--<link rel="import" href="cookie-display.html">-->
