--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,7 @@
             <iron-pages attr-for-selected="data-route" selected="{{route}}">
 
                 <section data-route="recipes">
-                    <recipe-collection></recipe-collection>
+                    <item-collection item-name="recipes"></item-collection>
                 </section>
 
                 <section data-route="recipe-details">
@@ -93,7 +93,7 @@
 
                 <!--<template is="dom-if" if="[[isUserAdmin(userRole)]]">-->
                     <section data-route="users">
-                        <item-collection item-name="users"><item-collection>
+                        <item-collection item-name="users"></item-collection>
                     </section>
                 <!--</template>-->
 
