--- a/app/elements/recipe-details.html
+++ b/app/elements/recipe-details.html
@@ -52,7 +52,7 @@
                 <!-- Form version. -->
                 <template is="dom-if" if="[[editMode]]">
                     <div class="layout horizontal wrap">
-                        <div class="flex-4 recipe-col">
+                        <div class="flex-4 item-col">
                             <paper-input type="text"
                                     label="Title"
                                     value="{{recipe.title}}">
@@ -87,13 +87,14 @@
 
                             <div class="layout horizontal center-justified">
                                 <paper-button on-tap="addIngredient">
-                                    <iron-icon icon="icons:add-circle"></iron-icon>
+                                    <iron-icon icon="icons:add-circle">
+                                    </iron-icon>
                                     Add item
                                 </paper-button>
                             </div>
                         </div>
 
-                        <div class="flex-4 recipe-col">
+                        <div class="flex-4 item-col">
                             <!-- Directions inputs. -->
                             <strong class="recipe-item-label">
                                 Directions
@@ -108,7 +109,8 @@
                                     <paper-button
                                             data-index$="[[index]]"
                                             on-tap="deleteDirection">
-                                        <iron-icon icon="icons:cancel"></iron-icon>
+                                        <iron-icon icon="icons:cancel">
+                                        </iron-icon>
                                         Remove Step [[addOne(index)]]
                                     </paper-button>
                                     <paper-icon-button
@@ -121,12 +123,13 @@
                             </template>
                             <div class="layout horizontal center-justified">
                                 <paper-button on-tap="addDirection">
-                                    <iron-icon icon="icons:add-circle"></iron-icon>
+                                    <iron-icon icon="icons:add-circle">
+                                    </iron-icon>
                                     Add item
                                 </paper-button>
                             </div>
                         </div>
-                        <div class="flex-4 recipe-col">
+                        <div class="flex-4 item-col">
                             <paper-input type="text"
                                     label="Amount"
                                     value="{{recipe.amount}}">
@@ -154,7 +157,7 @@
                 <!-- Display version. -->
                 <template is="dom-if" if="[[!editMode]]">
                     <div class="layout horizontal end end-justified wrap">
-                        <h3 class="recipe-title">[[recipe.title]]</h3>
+                        <h3 class="card-title">[[recipe.title]]</h3>
                         <!--<div class="layout horizontal end-justified">-->
                             <span class="flex"></span>
                             <span class="recipe-tags">
@@ -165,8 +168,10 @@
                     <div>[[recipe.summary]]</div>
 
                     <div class="layout horizontal wrap">
-                        <div class="flex-4 recipe-col">
-                            <strong class="recipe-item-label">Ingredients</strong>
+                        <div class="flex-4 item-col">
+                            <strong class="recipe-item-label">
+                                Ingredients
+                            </strong>
                             <ul class="ingredients-list">
                                 <template is="dom-repeat"
                                         items="[[recipe.ingredients]]"
@@ -175,8 +180,10 @@
                                 </template>
                             </ul>
                         </div>
-                        <div class="flex-4 recipe-col">
-                            <strong class="recipe-item-label">Directions</strong>
+                        <div class="flex-4 item-col">
+                            <strong class="recipe-item-label">
+                                Directions
+                            </strong>
                             <ol class="directions-list">
                                 <template is="dom-repeat"
                                         items="[[recipe.directions]]"
@@ -186,9 +193,11 @@
                             </ol>
                         </div>
                         <!-- Info column. -->
-                        <div class="flex-4 recipe-col">
+                        <div class="flex-4 item-col">
                             <template is="dom-if" if="[[recipe.amount]]">
-                                <strong class="recipe-item-label">Amount</strong>
+                                <strong class="recipe-item-label">
+                                    Amount
+                                </strong>
                                 <div>[[recipe.amount]]</div>
                             </template>
                             <template is="dom-if" if="[[recipe.time]]">
@@ -202,13 +211,17 @@
                             <strong class="recipe-item-label">Author</strong>
                             <div>[[recipe.author_name]]</div>
                             <template is="dom-if" if="[[recipe.source]]">
-                                <strong class="recipe-item-label">Source</strong>
+                                <strong class="recipe-item-label">
+                                    Source
+                                </strong>
                                 <div>[[recipe.source]]</div>
                             </template>
                             <strong class="recipe-item-label">Revision</strong>
                             <div>[[recipe.revision]]</div>
                             <template is="dom-if" if="[[recipe.notes]]">
-                                <strong class="recipe-item-label">Notes</strong>
+                                <strong class="recipe-item-label">
+                                    Notes
+                                </strong>
                                 <div>[[recipe.notes]]</div>
                             </template>
                         </div>
