--- a/app/styles/global-styles.html
+++ b/app/styles/global-styles.html
@@ -33,10 +33,28 @@
                  padding-bottom:    0.5em;
                  margin-top:        0.5em;
             }
+            .card-title {
+                margin-top:     0;
+                margin-bottom:  0;
+            }
+            .card-subtitle {
+                color:      gray;
+                text-align: right;
+            }
             .item-col {
-                 padding-left: 0.2em;
-                 padding-right: 0.2em;
-                 padding-bottom: 0.2em;
+                 margin-left: 0.4em;
+                 margin-right: 0.4em;
+                 margin-bottom: 0.2em;
+            }
+            td.td-label {
+                vertical-align: top;
+                text-align:     right;
+                padding-right:  0.8em;
+                width:          7em;
+            }
+            td.td-field {
+                overflow:   hidden;
+                word-wrap:  break-word;
             }
             ul.ingredients-list > li {
                 margin-bottom: 0.3em;
@@ -47,9 +65,6 @@
             .nav-button {
                 margin-left: 0.8em;
                 margin-right: 0.8em;
-            }
-            span.recipe-tags {
-                color: gray;
             }
             div.headerbar {
                 /*
